<resources>
    <string name="app_name">MOVIE CATALOGUE</string>
    <string name="title_movie">Movie</string>
    <string name="title_tvshow">TV Show</string>
    <string name="description">Description</string>
    <string name="title_tv">Tv Series</string>
    <string name="Description">Description</string>
    <string name="Genre">Vote Count</string>
    <string name="Duration">Popularity</string>
    <string name="Director">Vote Avarage</string>
    <string name="Sinopsis">Overview</string>
    <string name="change_language_settings">Language Configuration</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
