<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail.MovieDetail">

    <ProgressBar
        android:id="@+id/pb_detail_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:src="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:text="@string/title_movie"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_detail"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="5dp"
                android:text="@string/Genre"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@+id/iv_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="72dp"
                android:text="@string/Duration"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@+id/iv_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="120dp"
                android:text="@string/Director"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@+id/iv_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:text="@string/Genre"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@+id/iv_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="73dp"
                android:layout_height="21dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="96dp"
                android:text="@string/Duration"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@+id/iv_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

            <TextView
                android:id="@+id/tv_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="152dp"
                android:text="@string/Director"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@+id/iv_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/Sinopsis"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail" />

            <TextView
                android:id="@+id/tv_sinopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/Description"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>